kubernetes/overlays/us-east-1/prod/en/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rasa
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-passthrough: "true"
    traefik.ingress.kubernetes.io/preserve-host: "true"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: nlp-en.linguist.carlabs.com
    http:
      paths:
      - backend:
          serviceName: rasa
          servicePort: 80
